Wed Aug 13 15:46:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Add support for prefixes longer than
	  1 character to PrefixedTermIter.

Wed Aug 13 14:14:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/get_terms_for_field.py:
	  Whitespace tidyup.

Wed Aug 13 12:36:58 GMT 2008  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/searchconnection.py: Added get_terms_for_field().
	* xappy/unittests/get_terms_for_field.py: Test
	  get_terms_for_field().

Wed Aug 06 07:11:23 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/dociter.py: Add support for iterating through all
	  the documents to get a list directly, rather than having to call
	  get_document() on every item returned by iterids().

Wed Aug 06 07:10:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_accel.py,xappy/unittests/range_speed.py:
	  Add standard copyright headers.

Wed Aug 06 07:09:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Add a placeholder for documenting
	  query_external_weight().

Tue Aug 05 14:21:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Explain why we multiply the range
	  accel searches by 0.

Tue Aug 05 11:11:39 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/similar.py: Add test
	  case for similarity search with a non-indexed document, and fix
	  the remaining problems which that threw up.

Tue Aug 05 09:35:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_speed.py: Fix test to make problem more
	  obvious.

Tue Aug 05 08:08:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Convert