@@ -2294,35 +2294,17 @@ class SearchConnection(object):
         return _log(self._index.get_metadata, key)
 
 
-    def get_terms_for_field(self, field):
-        """Return a list of terms that this field has in the index.
+    def iter_terms_for_field(self, field):
+        """Return an iterator over the terms that a field has in the index.
         
-        Values are returned in the index's term list order, without prefixes.
-        
-        If no values are found, an empty list is returned.
+        Values are returned in sorted order (sorted by lexicographical binary
+        sort order of the UTF-8 encoded version of the term).
 
         """
-        prefix = self._field_mappings.get_prefix(field)
-        prefix_len = len(prefix)
-        
         if self._index is None:
-            return []
-        
-        terms = self._index.allterms()
-        try:
-            t = terms.skip_to(prefix)
-            if t.term.startswith(prefix):
-                ret = [t.term[prefix_len:]]
-                for t in terms:
-                    if not t.term.startswith(prefix): break
-                    ret.append(t.term[prefix_len:])
-            
-                return ret
-
-        except StopIteration:
-            pass
-
-        return []
+            raise _errors.IndexerError("SearchConnection has been closed")
+        prefix = self._field_mappings.get_prefix(field)
+        return PrefixedTermIter(prefix, self._index.allterms(prefix))
 
 if __name__ == '__main__':
     import doctest, sys
